--- a/Matterhorn.css
+++ b/Matterhorn.css
@@ -1,1 +1,6 @@
-<p style="text-align:center;"><img src="Matterhorn.png" alt="Logo"></p>
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
